--- a/charts/test-app-service/templates/service.yaml
+++ b/charts/test-app-service/templates/service.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "test-app-service.labels" . | nindent 4 }}
 spec:
-  type: LoadBalancer
+  type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
       targetPort: http
